[package]
name = "rime-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.1.9"
rime-api = "0.1.0"
anyhow = "1.0.69"
crossterm = "0.26.1"
tui = "0.19.0"
unicode-width = "0.1.10"
x11 = { version = "2.21.0", features = ["xlib", "xinput"] }
cstr = "0.2.11"
libc = "0.2.140"
home = "0.5.4"
