[package]
name = "rime-tui"
version = "0.1.1"
edition = "2021"
authors = ["bczhc <bczhc0@126.com>"]
license = "MIT"
description = "TUI App for Rime"
repository = "https://github.com/bczhc/rime-tui"
readme = "README.md"

[dependencies]
clap = "4.1.9"
rime-api = { path = "/home/bczhc/code/rime-api" }
#rime-api = "0.2.0"
librime-sys = "0.4.0"
anyhow = "1.0.69"
crossterm = "0.26.1"
tui = "0.19.0"
unicode-width = "0.1.10"
x11 = { version = "2.21.0", features = ["xlib", "xinput"] }
cstr = "0.2.11"
libc = "0.2.140"
home = "0.5.4"
gag = "1.0.0"
once_cell = "1.17.1"
regex = "1.7.1"
